check Subtasks is done

--- a/style/task_overlay.css
+++ b/style/task_overlay.css
@@ -68,7 +68,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .task-overlay main {
     height: 70%;
-    overflow: overlay;
+    overflow: auto;
     gap: 24px;
 }
 
@@ -197,15 +197,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .main-task-subtasks:empty {
     display: none;
-}
-
-.subtask-list::-webkit-scrollbar {
-    display: none;
-}
-
-.subtask-list {
-    max-height: 200px;
-    overflow-y: scroll;
 }
 
 .subtask {
