--- a/style/task_overlay.css
+++ b/style/task_overlay.css
@@ -72,6 +72,10 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     gap: 24px;
 }
 
+.task-overlay main::-webkit-scrollbar{
+    display: none;
+}
+
 .task-overlay header {
     height: 36px;
     display: flex;
@@ -639,10 +643,13 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     border-color: red;
 }
 
-.empty-subtask-input::placeholder {
+.color_red {
     color: red;
 }
 
+.empty-subtask-input::placeholder {
+    color: red;
+}
 
 /*                     wird noch standatisiert!!!                     */
 
