--- a/style/overlay_board_template.css
+++ b/style/overlay_board_template.css
@@ -12,8 +12,8 @@
 }
 
 .add-task-card {
-    width: 1116px;
-    height: 870px;
+    width: 1116px; /*1116px*/
+    height: 870px; /*870px*/
     border-radius: 30px;
     background-color: #FFFFFF;
 }
@@ -49,9 +49,9 @@
 
 .board-overlay-submit-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: flex-end;
-    margin: 184px 0 0 10%;
+    margin: 96px 0 0 10%;
     width: 80%;
 }
 
