--- a/style/standart.css
+++ b/style/standart.css
@@ -20,9 +20,7 @@
   font-family: 'Inter';
 }
 
-body {
-    overflow: hidden;
-}
+
 
 :root {
   --summary-color: #F6F7F8;
@@ -88,6 +86,10 @@ main {
 
 .d_none {
   display: none;
+}
+
+.of_hidden{
+  overflow: hidden;
 }
 
 @media (max-width: 800px) {
