--- a/style/task_overlay.css
+++ b/style/task_overlay.css
@@ -19,6 +19,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     position: fixed;
     transition: 125ms ease-in-out;
     transform: translateX(100%);
+    z-index: 4;
 }
 
 .tf_tlx100 {
@@ -26,12 +27,12 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .bleur-bg {
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100%;
     height: 100vh;
     transition: 0ms;
-    z-index: 0;
+    z-index: 3;
     background-color: rgba(0, 0, 0, 0.244);
 }
 
@@ -61,7 +62,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 2;
+    z-index: 4;
     max-height: 80%;
     max-width: 90%;
 }
