--- a/style/summary_mobile.css
+++ b/style/summary_mobile.css
@@ -26,7 +26,7 @@
 }
 /* Summary title initially hidden, fades in after greeting animation */
 .summary-title {
-  opacity: 0;
+  /* opacity: 0; */
   animation: fadeInContent 1s ease-in-out 3s forwards;
   position: relative;
   z-index: 1;
