--- a/style/add_task_v2.css
+++ b/style/add_task_v2.css
@@ -1,3 +1,6 @@
+.add-task-main {
+    max-width: calc(1440px - 232px);
+}
 
 .add-task-content-container {
     padding: 80px 96px 0 96px;
@@ -22,22 +25,31 @@
 }
 
 
-.add-task-form-left>div {
+.add-task-form-left>div,
+.add-task-form-right>div {
     display: flex;
     flex-direction: column;
     width: 100%;
     gap: 8px;
 }
 
-.add-task-form-left label {
+.add-task-form-left label,
+.add-task-form-right label {
     display: flex;
 }
 
-.add-task-form-left input {
-    /* height: 48px; */
-    padding: 12px 21px;
+.add-task-form-left-title-input,
+.add-task-form-default-inputs {
     border-radius: 10px;
     border: 1px solid #d1d1d1;
+}
+
+.add-task-form-left-title-input {
+    padding: 12px 21px;
+}
+
+.add-task-form-default-inputs {
+    padding: 12px 16px;
 }
 
 .add-tast-form-input-required-container {
@@ -54,7 +66,7 @@
 }
 
 .add-task-form-textarea {
-    height:100%;
+    height: 100%;
     border: 1px solid #d1d1d1;
     border-radius: 10px;
     padding: 18px 16px;
@@ -71,10 +83,33 @@
     height: 400px;
 }
 
-.add-task-priority-btns {
+.add-task-priority-btns-container {
     height: 88px;
 }
 
+.add-task-priority-btns {
+    display: flex;
+    gap: 16px;
+}
+
+.add-task-priority-btns button {
+    cursor: pointer;
+    width: 136px;
+    height: 56px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 16px 10px;
+    gap: 8px;
+    border-radius: 10px;
+    border-width: 0;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.add-task-priority-btns button>p {
+    font-size: 20px;
+    font-weight: 400;
+}
 
 
 
@@ -107,7 +142,7 @@
     width: 110px;
     border-radius: 10px;
     border: 1px solid #2A3647;
-    
+
 }
 
 .add-task-form-clear-btn>p {
@@ -139,6 +174,10 @@
 
 .h-96 {
     height: 96px;
+}
+
+.h-80 {
+    height: 80px;
 }
 
 .h-16 {
