--- a/style/add_task_v2.css
+++ b/style/add_task_v2.css
@@ -128,12 +128,38 @@
     gap: 8px;
     border-radius: 10px;
     border-width: 0;
+
+}
+
+.add-task-priority-btns-hover-class:hover {
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.add-task-priority-btn-urgent-active {
+    background-color: #FF3D00;
+}
+
+.add-task-priority-btn-medium-active {
+    background-color: #FFA800;
+}
+
+.add-task-priority-btn-low-active {
+    background-color: #7AE229;
+}
+
+.add-task-priority-btn-urgent-active p,
+.add-task-priority-btn-medium-active p,
+.add-task-priority-btn-low-active p {
+    color: #FFFFFF;
 }
 
 .add-task-priority-btns button>p {
     font-size: 20px;
     font-weight: 400;
+}
+
+.add_task_priority_active_svg path {
+    fill: white;
 }
 
 .add-task-assigned-to-category-label>svg {
