--- a/style/add_task_v2.css
+++ b/style/add_task_v2.css
@@ -169,6 +169,69 @@
     transform: translateY(-50%);
 }
 
+.add-task-form-assigned-to-dropdown {
+    display: flex;
+    flex-direction: column;
+}
+
+.add-task-form-assigned-to-dropdown-contacts {
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    background-color: #FFFFFF;
+}
+
+.add-task-form-assigned-to-dropdown-contacts li {
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 7px 16px;
+    border-radius: 10px;
+}
+
+.add-task-form-assigned-to-dropdown-contacts-default-hover-class:hover {
+    background-color: #EEEEEE;
+}
+
+.add-task-form-assigned-to-dropdown-contacts-checked {
+    background-color: #2A3647;
+}
+
+.add-task-form-assigned-to-dropdown-contacts-checked .add-task-form-assigned-to-dropdown-list-contact>p {
+    color: #FFFFFF;
+}
+
+.add-task-form-assigned-to-dropdown-contacts-checked>svg {
+    fill: #FFFFFF;
+}
+
+.add-task-form-assigned-to-dropdown-contacts-checked:hover {
+    background-color: #091931;
+}
+
+.add-task-form-assigned-to-dropdown-list-contact {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
+.add-task-form-assigned-to-dropdown-contacts-icon {
+    height: 42px;
+    width: 42px;
+    border-radius: 50%;
+    background-color: rgba(255, 122, 0, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.add-task-form-assigned-to-dropdown-contacts-icon>p {
+    font-size: 12px;
+    font-weight: 400;
+    color: #FFFFFF;
+}
 
 
 
@@ -245,6 +308,10 @@
 
 .w-100 {
     width: 100%;
+}
+
+.d_none {
+    display: none;
 }
 
 
