--- a/style/summary.css
+++ b/style/summary.css
@@ -1,14 +1,17 @@
 /* animated overlay for responsive design */
 .animated-overlay {
-  position: fixed;
-  top: 0;
+  position: absolute;
+  top: 96px;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: #f6f7f8;
+  height: 80%;
   display: none;
+  background-color: #f6f7f8;
   justify-content: center;
   align-items: center;
+}
+
+.animated-overlay-background {
   z-index: 50;
 }
 
