--- a/style/add_task_v2.css
+++ b/style/add_task_v2.css
@@ -64,7 +64,7 @@
     padding: 12px 16px;
 }
 
-.add-tast-form-input-required-container {
+.add-task-form-input-required-container {
     height: 64px;
 }
 
@@ -103,9 +103,12 @@
 }
 
 .add-task-due-date-label-placeholder-svg {
+    z-index: 1;
     position: absolute;
-    bottom: 40px;
+    bottom: 38px;
     left: 16px;
+    transform: translateY(50%);
+    background-color: #FFFFFF;
 }
 
 .add-task-form-seperator {
@@ -401,9 +404,19 @@
     color: #E60026;
 }
 
-.add-task-form input::placeholder {
+.add-task-form-input-placeholder-default::placeholder,
+.add-task-form-input-placeholder-black::placeholder {
     font-size: 20px;
     font-weight: 400;
+    color: #D1D1D1;
+}
+
+.add-task-form-input-placeholder-default::placeholder {
+    color: #D1D1D1;
+}
+
+.add-task-form-input-placeholder-black::placeholder {
+    color: #000000;
 }
 
 .add-task-form-subtasks-dropdown-subtasks-item label,
