--- a/style/add_task_v2.css
+++ b/style/add_task_v2.css
@@ -173,6 +173,9 @@
     right: 16px;
     height: 24px;
     width: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .add-task-form-assigned-to-arrow-down-svg {
