--- a/style/board_resp.css
+++ b/style/board_resp.css
@@ -52,6 +52,7 @@
         flex-direction: row;
         align-items: flex-start;
         overflow-x: scroll;
+        padding-right: 20%;
     }
 
     .task {
