--- a/style/board.css
+++ b/style/board.css
@@ -237,6 +237,23 @@
     color: rgba(168, 168, 168, 1);
 }
 
+.task header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.task header button{
+    background-color: transparent;
+    border: none;
+    width: 24px;
+    height: 26px;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    box-sizing: content-box;
+}
+
 .task-label {
     width: fit-content;
     padding: 4px 16px;
@@ -388,12 +405,8 @@
     border: none;
     gap: 8px;
     padding: 4px 5px 4px 2px;
-    padding-top: 4px;
-    padding-right: 5px;
-    padding-bottom: 4px;
-    padding-left: 2px;
     border-radius: 8px;
     color: white;
     font-size: 14px;
-    font-weight: 500;
+    width: 100%;
 }
